--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "firebase": "^11.4.0",
     "firebase-functions": "^6.3.2",
     "vue": "^2.6.14",
+    "vue-router": "^3.6.5",
     "vuetify": "^2.6.0"
   },
   "devDependencies": {
